[tool.poetry]
name = "langchain-templates"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<2"
summarize-anthropic = {path = "packages\\summarize-anthropic", develop = true}
vertexai-chuck-norris = {path = "packages\\vertexai-chuck-norris", develop = true}
openai-functions-agent = {path = "packages\\openai-functions-agent", develop = true}
rag-chroma-private = {path = "packages\\rag-chroma-private", develop = true}
rag-conversation = {path = "packages\\rag-conversation", develop = true}
rag-pinecone-rerank = {path = "packages\\rag-pinecone-rerank", develop = true}
anthropic-iterative-search = {path = "packages\\anthropic-iterative-search", develop = true}
rag-semi-structured = {path = "packages\\rag-semi-structured", develop = true}
rag-timescale-hybrid-search-time = {path = "packages\\rag-timescale-hybrid-search-time", develop = true}
hyde = {path = "packages\\hyde", develop = true}
stepback-qa-prompting = {path = "packages\\stepback-qa-prompting", develop = true}
rag-fusion = {path = "packages\\rag-fusion", develop = true}
rag-pinecone-multi-query = {path = "packages\\rag-pinecone-multi-query", develop = true}


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
